# kavzi-trader

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  .rooignore  08_commons.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  alembic.ini  cli.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml
.claude/agents/: run-analyzer.md
.cursor/rules/: clean_architecture.mdc  commons.mdc  error_handling_logging.mdc  file_organization.mdc  general_principles.mdc  project_setup.mdc  pydantic_models.mdc  testing.mdc  type_hints_functions.mdc  version_control.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 21f763952ce5_initial_schema.py  3b2fec8813bf_initial.py  6a43465030be_initial.py  8faf7fd2ac6e_initial.py  fa708376b6c3_setup_timescale_hypertables.py
config/: config.yaml  tiers.yaml
config/database/: default.yaml
config/hydra/: config.yaml
config/model/: cnn.yaml  transformer.yaml
docker/: .env  docker-compose.yml
docker/postgres/: postgresql.conf
docker/postgres-init/: 01-init.sql
docs/: 01_INITIAL_SETUP.md  02_ARCHITECTURE.md  02_IMPLEMENTATION_PLAN.md  03_DATABASE.md  03_LLM_ARCHITECTURE.md  04_CODING_STANDARDS.md  05_IMPLEMENTATION_PLAN.md  06_SPINE_IMPLEMENTATION.md  07_TRADING_PLAN.md  08_TODO.md  APPENDIX_LLM_ARCHITECTURE_REFERENCE.md  CRYPTO_SENTIMENT_RESEARCH.md  CURRENT_ARCHITECTURE.md  EVENT_SOURCING.md  EXTERNAL_DATA_SOURCES.md  NN_TRADING.md  NOOB_GUIDE_TO_TRADING.md  PROMPT_REFERENCE.md  RESEARCH_TRADE_MODELS.md
examples/: binance_api_example.py  historical_data_example.py
kavzi_models/: README.md  __init__.py
kavzi_models/common/: __init__.py  database.py  dataset.py  metrics.py  triton.py
kavzi_models/conf/: __init__.py  forecaster.yaml
kavzi_models/embeddings/: __init__.py
kavzi_models/forecaster/: __init__.py  config.py  data.py  model.py  trainer.py
kavzi_models/inference/: __init__.py
kavzi_models/scripts/: __init__.py  train_forecaster.py
kavzi_models/sentiment/: __init__.py
kavzi_trader/brain/: __init__.py  config.py
kavzi_trader/cli/: core.py  main.py
kavzi_trader/commons/: __init__.py  async_utils.py  date_range_schema.py  datetime_schema.py  logging.py  path_utility.py  time_utility.py  trading_constants.py
kavzi_trader/config/: __init__.py
kavzi_trader/events/: __init__.py  config.py  event_schema.py  serialization.py  store.py
kavzi_trader/indicators/: __init__.py  base.py  calculator.py  config.py  momentum.py  schemas.py  trend.py  volatility.py  volume.py
kavzi_trader/monitoring/: __init__.py  decision_log.py  decision_log_schema.py  metrics.py  structured_logger.py
kavzi_trader/orchestrator/: __init__.py  config.py  health.py  orchestrator.py
kavzi_trader/order_flow/: __init__.py  calculator.py  funding.py  open_interest.py  schemas.py
kavzi_trader/paper/: __init__.py  client.py  config.py  exchange.py  mode.py
kavzi_trader/reporting/: __init__.py  report_state_schema.py  trade_report_populator.py
reports/: report_2026_03_27.md  report_2026_03_27_run2.md  report_2026_03_27_run3.md  report_2026_03_27_run4.md
results/logs/: kavzitrader_log_20260324_215828.jsonl  kavzitrader_log_20260324_215834.jsonl
scripts/: init_db.py  init_timescaledb.py  setup_dev.py  test_historical_data.py
src/: __main__.py
src/cli/: core.py  main.py
src/commons/: __init__.py  async_utils.py  datetime_schema.py  logging.py  path_utility.py  time_utility.py
src/config/: __init__.py  hydra_util.py
src/models/: __init__.py
tests/: conftest.py  test_app_config.py
tests/api/: conftest.py  test_binance_client.py  test_binance_historical.py  test_binance_websocket.py  test_common_api.py
tests/brain/: conftest.py  test_brain_config.py
tests/cli/: test_model_commands.py  test_trade_commands.py
tests/commons/: test_async_utils.py  test_path_utility.py  test_time_utility.py  test_time_utility_extensions.py
tests/events/: __init__.py  test_serialization.py  test_store.py
tests/indicators/: conftest.py  test_base.py  test_calculator.py  test_momentum.py  test_trend.py  test_volatility.py  test_volume.py
tests/monitoring/: test_decision_log.py  test_metrics.py  test_structured_logger.py
tests/orchestrator/: test_confluence_thresholds.py  (+8 more)
trading_plans/: btc_trend_following.yaml
(+322 files in other folders)
