[project]
name = "kavzitrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "backtrader>=1.9.78.123",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "hydra-core>=1.3.2",
    "numpy>=2.2.4",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.0",
    "pytest-env>=1.1.5",
    "python-binance>=1.0.28",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "tensorboard>=2.19.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "types-pyyaml>=6.0.12.20250326",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "pytests",
]


[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "TD",
    "FIX",
    "S311",
    "S603",
    "S608", # TODO: Remove this
    "PLR0913",
    "ANN101",
    "ANN102",
    "PGH003",
    "PTH123",
    "PTH118",
    "PTH119",
    "TRY003",
    "EM101",
    "EM102",
    "FBT003",
    "FBT001",
    "TCH001",
    "TCH002",
    "G004",
    "FBT002"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["S101", "S106", "S108", "SLF001", "PLR0913", "TRY301", "PT011", "ANN", "ARG", "PTH", "PERF", "PLR2004"]
"**/{alembic}/*" = ["ERA001", "ARG005", "F403", "S607"]
"**/{scripts,examples}/*" = ["T201", "S607"]
